--- a/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
@@ -14,17 +14,15 @@
     tools:context=".ui.finishedPartnerGameDetail.FinishedPartnerGameDetailFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/main_background_color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/toolbar_background_color"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <RelativeLayout
@@ -51,114 +49,75 @@
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/toolbarAndTeamsDivider"
+        <TextView
+            android:id="@+id/teamNames"
+            style="@style/HeaderTextViewStyle"
+            android:text="@string/teams"
+            android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolBar"
-            android:layout_marginTop="0dp"
-            style="@style/DividerStyle"/>
+            app:drawableLeftCompat="@drawable/ic_partner" />
 
-        <TextView
-            android:id="@+id/teamNames"
-            style="@style/TitleTextViewStyle"
-            android:text="@string/teams"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbarAndTeamsDivider" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            style="@style/TeamImageViewStyle"
-            android:layout_marginStart="16dp"
-            android:contentDescription="@string/todo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/teamNames" />
 
         <TextView
             android:id="@+id/team1Name"
             style="@style/NameTextViewStyle"
-            android:layout_marginStart="6dp"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            android:background="#F1F1F1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/teamNames" />
 
         <TextView
             android:id="@+id/team1TotalScore"
             style="@style/ScoreTextViewStyle"
-            android:layout_marginStart="6dp"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/team1Name" />
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/partnerColumnDivider"
-            android:layout_width="0.5dp"
-            android:layout_height="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/partnerAndRecyclerViewRowDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/teamNames"
-            style="@style/DividerStyle"/>
-
-        <ImageView
-            android:id="@+id/imageView2"
-            style="@style/TeamImageViewStyle"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@string/todo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/teamNames" />
+            app:layout_constraintTop_toBottomOf="@+id/team1Name" />
 
         <TextView
             android:id="@+id/team2Name"
             style="@style/NameTextViewStyle"
-            android:layout_marginEnd="6dp"
-            app:layout_constraintEnd_toStartOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/teamNames" />
+            android:background="#F1F1F1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/team1TotalScore" />
 
         <TextView
             android:id="@+id/team2TotalScore"
             style="@style/ScoreTextViewStyle"
-            android:layout_marginEnd="6dp"
-            app:layout_constraintEnd_toStartOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/team2Name" />
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/partnerAndRecyclerViewRowDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="26dp"
-            app:layout_constraintTop_toBottomOf="@+id/partnerColumnDivider"
-            style="@style/DividerStyle"/>
+            app:layout_constraintTop_toBottomOf="@+id/team2Name" />
+
 
         <TextView
             android:id="@+id/roundLabel"
-            style="@style/TitleTextViewStyle"
+            style="@style/HeaderTextViewStyle"
             android:text="@string/round_scores"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/partnerAndRecyclerViewRowDivider" />
+            app:layout_constraintTop_toBottomOf="@+id/team2TotalScore"
+            app:drawableLeftCompat="@drawable/ic_scoreboard" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/roundRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/roundLabel" />
 
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/detailLabelRecyclerViewRowDivider"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerView"
-            style="@style/DividerStyle"/>
 
         <TextView
             android:id="@+id/detailLabel"
-            style="@style/TitleTextViewStyle"
+            style="@style/HeaderTextViewStyle"
             android:text="@string/detail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detailLabelRecyclerViewRowDivider" />
+            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerView"
+            app:drawableLeftCompat="@drawable/ic_info" />
 
         <TextView
             android:id="@+id/gameDetail"
@@ -168,18 +127,31 @@
             app:layout_constraintTop_toBottomOf="@+id/detailLabel" />
 
         <TextView
-            android:id="@+id/gameDate"
-            style="@style/DateTextViewStyle"
-            android:layout_margin="16dp"
-            app:drawableLeftCompat="@drawable/ic_calendar"
+            android:id="@+id/expandableTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="6dp"
+            android:gravity="center_vertical"
+            android:maxLines="3"
+            android:lineSpacingExtra="4dp"
+            android:textColor="@color/date_text_color"
+            android:textSize="13sp"
+            android:textStyle="normal"
+            android:paddingStart="32dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gameDetail" />
 
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/gameDateDivider"
-            app:layout_constraintEnd_toEndOf="parent"
+        <TextView
+            android:id="@+id/gameDate"
+            style="@style/DateTextViewStyle"
+            android:layout_margin="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gameDate"
-            style="@style/DividerStyle"/>
+            app:layout_constraintTop_toBottomOf="@+id/expandableTextView" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
