--- a/app/src/main/res/layout/fragment_finished_single_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_single_game_detail.xml
@@ -11,13 +11,12 @@
     app:layout_constraintTop_toBottomOf="parent"
     android:layout_marginBottom="16dp"
     android:background="@color/main_background_color"
-    tools:context=".ui.finishedPartnerGameDetail.FinishedPartnerGameDetailFragment">
-
+    tools:context=".ui.finishedSingleGameDetail.FinishedSingleGameDetailFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/main_background_color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolBar"
@@ -50,197 +49,135 @@
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/toolbarAndPlayersDivider"
+        <TextView
+            android:id="@+id/teamNames"
+            style="@style/HeaderTextViewStyle"
+            android:text="@string/players"
+            android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolBar"
-            android:layout_marginTop="0dp"
-            style="@style/DividerStyle"/>
-
-        <TextView
-            android:id="@+id/teamNames"
-            style="@style/TitleTextViewStyle"
-            android:text="@string/players"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbarAndPlayersDivider" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            style="@style/PlayerImageViewStyle"
-            android:layout_marginStart="16dp"
-            android:contentDescription="@string/todo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/teamNames" />
+            app:drawableLeftCompat="@drawable/ic_player" />
 
         <TextView
             android:id="@+id/player1Name"
             style="@style/NameTextViewStyle"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            android:background="#F1F1F1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/teamNames" />
-
 
         <TextView
             android:id="@+id/player1TotalScore"
             style="@style/ScoreTextViewStyle"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/player1Name" />
-
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/playerColumnDivider"
-            android:layout_width="0.5dp"
-            android:layout_height="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/playerRowSeparator"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/teamNames"
-            style="@style/DividerStyle"/>
-
-        <ImageView
-            android:id="@+id/imageView2"
-            style="@style/PlayerImageViewStyle"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@string/todo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/teamNames" />
-
+            app:layout_constraintTop_toBottomOf="@+id/player1Name" />
 
         <TextView
             android:id="@+id/player2Name"
             style="@style/NameTextViewStyle"
-            app:layout_constraintEnd_toStartOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/teamNames" />
-
+            android:background="#F1F1F1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/player1TotalScore" />
 
         <TextView
             android:id="@+id/player2TotalScore"
             style="@style/ScoreTextViewStyle"
-            app:layout_constraintEnd_toStartOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/player2Name" />
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/playerRowSeparator"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="26dp"
-            app:layout_constraintTop_toBottomOf="@+id/playerColumnDivider"
-            style="@style/DividerStyle"/>
-
-        <ImageView
-            android:id="@+id/imageView3"
-            style="@style/PlayerImageViewStyle"
-            android:layout_marginStart="16dp"
-            android:contentDescription="@string/todo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/playerRowSeparator" />
-
+            app:layout_constraintTop_toBottomOf="@+id/player2Name" />
 
         <TextView
             android:id="@+id/player3Name"
             style="@style/NameTextViewStyle"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/playerRowSeparator" />
-
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/playerColumnDivider2"
-            android:layout_width="0.5dp"
-            android:layout_height="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/playerAndDetailRowSeparator"
+            android:background="#F1F1F1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/playerRowSeparator"
-            style="@style/DividerStyle"/>
-
+            app:layout_constraintTop_toBottomOf="@+id/player2TotalScore" />
 
         <TextView
             android:id="@+id/player3TotalScore"
             style="@style/ScoreTextViewStyle"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/player3Name" />
-
-        <ImageView
-            android:id="@+id/imageView4"
-            style="@style/PlayerImageViewStyle"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@string/todo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/playerRowSeparator" />
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/playerAndDetailRowSeparator"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="26dp"
-            app:layout_constraintTop_toBottomOf="@+id/playerColumnDivider2"
-            style="@style/DividerStyle"/>
+            app:layout_constraintTop_toBottomOf="@+id/player3Name" />
+
         <TextView
             android:id="@+id/player4Name"
             style="@style/NameTextViewStyle"
-            app:layout_constraintEnd_toStartOf="@+id/imageView4"
-            app:layout_constraintTop_toBottomOf="@+id/playerRowSeparator" />
+            android:background="#F1F1F1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/player3TotalScore" />
 
         <TextView
             android:id="@+id/player4TotalScore"
             style="@style/ScoreTextViewStyle"
-            app:layout_constraintEnd_toStartOf="@+id/imageView4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/player4Name" />
-
 
         <TextView
             android:id="@+id/roundLabel"
-            style="@style/TitleTextViewStyle"
+            style="@style/HeaderTextViewStyle"
             android:text="@string/round_scores"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/playerAndDetailRowSeparator" />
-
+            app:layout_constraintTop_toBottomOf="@+id/player4TotalScore"
+            app:drawableLeftCompat="@drawable/ic_scoreboard" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/roundRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/roundLabel" />
 
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/detailLabelRecyclerViewRowDivider"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerView"
-            style="@style/DividerStyle"/>
 
         <TextView
             android:id="@+id/detailLabel"
-            style="@style/TitleTextViewStyle"
+            style="@style/HeaderTextViewStyle"
             android:text="@string/detail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detailLabelRecyclerViewRowDivider" />
+            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerView"
+            app:drawableLeftCompat="@drawable/ic_info" />
 
         <TextView
             android:id="@+id/gameDetail"
             style="@style/InfoTextViewStyle"
+            android:layout_margin="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailLabel" />
 
         <TextView
-            android:id="@+id/gameDate"
-            style="@style/DateTextViewStyle"
+            android:id="@+id/expandableTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="6dp"
+            android:gravity="center_vertical"
+            android:maxLines="3"
+            android:lineSpacingExtra="4dp"
+            android:textColor="@color/date_text_color"
+            android:textSize="13sp"
+            android:textStyle="normal"
+            android:paddingStart="32dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gameDetail" />
 
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/gameDateDivider"
-            app:layout_constraintEnd_toEndOf="parent"
+        <TextView
+            android:id="@+id/gameDate"
+            style="@style/DateTextViewStyle"
+            android:layout_margin="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gameDate"
-            style="@style/DividerStyle"/>
+            app:layout_constraintTop_toBottomOf="@+id/expandableTextView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
