--- a/app/src/main/res/layout/fragment_save_partner_game.xml
+++ b/app/src/main/res/layout/fragment_save_partner_game.xml
@@ -110,18 +110,19 @@
 
         <TextView
             android:id="@+id/playerNameTitle"
-            style="@style/TitleTextViewStyle"
-            android:text="@string/teamNamesAndScoresTitle"
+            style="@style/HeaderTextViewStyle"
+            android:layout_marginTop="16dp"
             android:visibility="invisible"
+            android:text="@string/teamNamesAndScoresTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/confirmNames" />
+            app:layout_constraintTop_toBottomOf="@+id/confirmNames"
+            app:drawableLeftCompat="@drawable/ic_partner" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/team1Name"
             style="@style/NameTextInputLayoutStyle"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
             android:background="@color/main_background_color"
             android:backgroundTint="@color/main_background_color"
             android:visibility="invisible"
@@ -142,9 +143,7 @@
             style="@style/DividerStyle"
             android:layout_width="0.3dp"
             android:layout_height="30dp"
-            android:layout_margin="16dp"
             android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@+id/roundsAndTitleDivider"
             app:layout_constraintEnd_toStartOf="@id/team2Name"
             app:layout_constraintStart_toEndOf="@id/team1Name"
             app:layout_constraintTop_toBottomOf="@+id/playerNameTitle" />
@@ -154,7 +153,6 @@
             android:id="@+id/team2Name"
             style="@style/NameTextInputLayoutStyle"
             android:layout_marginEnd="8dp"
-            android:layout_marginTop="16dp"
             app:boxStrokeWidth="0dp"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
@@ -167,31 +165,21 @@
                 android:focusable="false" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/roundsAndTitleDivider"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/team1Name"
-            android:visibility="invisible"
-            android:layout_marginTop="16dp"
-            style="@style/DividerStyle"/>
 
         <TextView
             android:id="@+id/roundScoreTitle"
-            style="@style/TitleTextViewStyle"
+            style="@style/HeaderTextViewStyle"
             android:text="@string/team_round_scores"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/roundsAndTitleDivider" />
+            app:layout_constraintTop_toBottomOf="@id/team2Name"
+            app:drawableLeftCompat="@drawable/ic_scoreboard" />
 
         <LinearLayout
             android:id="@+id/scoreLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="20dp"
             android:orientation="vertical"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
