--- a/app/src/main/res/layout/fragment_save_single_game.xml
+++ b/app/src/main/res/layout/fragment_save_single_game.xml
@@ -152,19 +152,19 @@
 
         <TextView
             android:id="@+id/playerNameTitle"
-            style="@style/TitleTextViewStyle"
+            style="@style/HeaderTextViewStyle"
             android:layout_marginTop="16dp"
             android:text="@string/playerNamesAndScoresTitle"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/confirmNames" />
+            app:layout_constraintTop_toBottomOf="@+id/confirmNames"
+            app:drawableStartCompat="@drawable/ic_player" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/player1Name"
             style="@style/NameTextInputLayoutStyle"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
             android:visibility="invisible"
             app:boxStrokeWidth="0dp"
             app:layout_constraintEnd_toStartOf="@+id/scoreColumnDivider"
@@ -182,10 +182,10 @@
             style="@style/DividerStyle"
             android:layout_width="0.3dp"
             android:layout_height="30dp"
-            app:layout_constraintEnd_toStartOf="@id/player2Name"
             android:layout_margin="8dp"
             android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@id/roundsAndTitleDivider"
+            app:layout_constraintEnd_toStartOf="@id/player2Name"
+            app:layout_constraintBottom_toBottomOf="@id/player4Name"
             app:layout_constraintStart_toEndOf="@id/player1Name"
             app:layout_constraintTop_toBottomOf="@+id/playerNameTitle" />
 
@@ -193,7 +193,6 @@
             android:id="@+id/player2Name"
             style="@style/NameTextInputLayoutStyle"
             android:visibility="invisible"
-            android:layout_marginTop="16dp"
             app:boxStrokeWidth="0dp"
             app:layout_constraintEnd_toEndOf="@id/scoreColumnDivider2"
             app:layout_constraintStart_toEndOf="@+id/scoreColumnDivider"
@@ -212,8 +211,9 @@
             android:layout_width="0.3dp"
             android:layout_height="30dp"
             android:layout_margin="8dp"
+            android:layout_marginBottom="44dp"
             android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@+id/roundsAndTitleDivider"
+            app:layout_constraintBottom_toTopOf="@+id/roundScoreTitle"
             app:layout_constraintEnd_toStartOf="@id/player3Name"
             app:layout_constraintStart_toEndOf="@id/player2Name"
             app:layout_constraintTop_toBottomOf="@+id/playerNameTitle" />
@@ -223,7 +223,6 @@
             android:id="@+id/player3Name"
             style="@style/NameTextInputLayoutStyle"
             android:visibility="invisible"
-            android:layout_marginTop="16dp"
             app:boxStrokeWidth="0dp"
             app:layout_constraintEnd_toStartOf="@id/scoreColumnDivider3"
             app:layout_constraintStart_toEndOf="@id/scoreColumnDivider2"
@@ -242,7 +241,7 @@
             android:layout_height="30dp"
             android:layout_margin="8dp"
             android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@id/roundsAndTitleDivider"
+            app:layout_constraintBottom_toBottomOf="@id/player4Name"
             app:layout_constraintTop_toBottomOf="@+id/playerNameTitle"
             app:layout_constraintEnd_toStartOf="@id/player4Name"
             app:layout_constraintStart_toEndOf="@id/player3Name" />
@@ -251,7 +250,6 @@
             android:id="@+id/player4Name"
             style="@style/NameTextInputLayoutStyle"
             android:visibility="invisible"
-            android:layout_marginTop="16dp"
             app:boxStrokeWidth="0dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -264,32 +262,20 @@
                 android:focusable="false"/>
         </com.google.android.material.textfield.TextInputLayout>
 
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/roundsAndTitleDivider"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/player1Name"
-            android:visibility="invisible"
-            android:layout_marginTop="16dp"
-            style="@style/DividerStyle"/>
-
         <TextView
             android:id="@+id/roundScoreTitle"
-            style="@style/TitleTextViewStyle"
+            style="@style/HeaderTextViewStyle"
             android:text="@string/teamScoresTitle"
             android:visibility="invisible"
-            app:layout_constraintTop_toBottomOf="@id/roundsAndTitleDivider"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/player4Name"
+            app:drawableLeftCompat="@drawable/ic_scoreboard" />
 
         <LinearLayout
             android:id="@+id/scoreLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="16dp"
             android:orientation="vertical"
             android:visibility="invisible"
             app:layout_constraintTop_toBottomOf="@id/roundScoreTitle"
