--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -48,6 +48,10 @@
     <color name="back_icon_color">#FFFFFF</color>
     <color name="button_background_color">#424242</color>
     <color name="divider_color">#45494A</color>
+    <color name="tab_indicator_color">#4CAF50</color>
     <color name="searchview_border_color">#45494A</color>
-
+    <color name="line_color_dark">#F1F1F1</color>
+    <color name="line_color_light">#FFFFFF</color>
+    <color name="header_text_color">#FFFFFF</color>
+    <color name="header_background_color">#45494A</color>
 </resources>
