--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimaryDark">@color/primary_color</item>
         <item name="android:colorPrimaryDark">@color/primary_color</item>
         <item name="android:windowLightStatusBar">false</item>
+        <item name="android:colorBackground">@color/main_background_color</item>
     </style>
 
 </resources>
