--- a/app/src/main/res/drawable/ic_trophy.xml
+++ b/app/src/main/res/drawable/ic_trophy.xml
@@ -1,11 +1,5 @@
-<vector android:height="24dp" android:viewportHeight="100"
-    android:viewportWidth="100" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#EDEDED" android:pathData="M50,0c27.61,0 50,22.39 50,50s-22.39,50 -50,50 -50,-22.39 -50,-50 22.39,-50 50,-50z"/>
-    <path android:fillColor="#2B414D" android:pathData="M29,95.38c6.39,2.96 13.5,4.62 21,4.62 7.5,0 14.62,-1.66 21,-4.63v-5.37h-41.98s-0.02,3.46 -0.03,5.37z"/>
-    <path android:fillColor="#324D5B" android:pathData="M50,83.01c11.6,0 21,3.13 21,7 0,3.87 -9.4,7 -21,7s-21,-3.13 -21,-7c0,-3.86 9.4,-7 21,-7z"/>
-    <path android:fillColor="#EFC75E" android:pathData="M72.02,31.13c0,-3.06 -0.07,-5.1 -0.07,-5.1 -10.43,-0.02 -29.53,-0.01 -43.94,0 0,0 -0.06,2.04 -0.05,5.11 -9.98,-1.58 -20.96,11.63 5.62,29.69 4.27,7 10.1,12.49 10.1,12.49 -0.02,0 0.45,0.14 1.13,0.33 0.45,2.03 1.52,8.73 -1.66,16.26 -0.09,0.11 -0.14,0.23 -0.14,0.35 0,0.97 3.13,1.75 7,1.75s7,-0.78 7,-1.75c0,-0.12 -0.05,-0.24 -0.14,-0.35 -3.22,-7.55 -2.12,-14.25 -1.66,-16.27 0.67,-0.18 1.14,-0.31 1.15,-0.32 0,0 5.88,-5.54 10.16,-12.58 26.42,-18 15.49,-31.15 5.52,-29.6zM28.01,35.06c0.13,5.01 0.5,11.2 1.47,16.08 0.26,1.3 0.66,2.61 1.17,3.9 -14.49,-13.38 -10.36,-20.58 -2.64,-19.98zM69.41,54.93c0.48,-1.26 0.87,-2.53 1.13,-3.79 0.98,-4.88 1.33,-11.07 1.44,-16.08 7.68,-0.57 11.77,6.59 -2.57,19.87z"/>
-    <path android:fillColor="#2B414D" android:pathData="M52.5,53h-0.5v-10h0.5c0.83,0 1.5,-0.67 1.5,-1.5s-0.67,-1.5 -1.5,-1.5h-5c-0.83,0 -1.5,0.67 -1.5,1.5s0.67,1.5 1.5,1.5h0.5v10h-0.5c-0.83,0 -1.5,0.67 -1.5,1.5s0.67,1.5 1.5,1.5h5c0.83,0 1.5,-0.67 1.5,-1.5s-0.67,-1.5 -1.5,-1.5z"/>
-    <path android:fillColor="#DCB757" android:pathData="M44.87,73.99c0.47,2.37 1.28,8.77 -1.74,15.91 -0.09,0.11 -0.14,0.23 -0.14,0.35 0,0.5 0.84,0.95 2.19,1.27 1.8,-6.07 2.53,-10.21 0.98,-17.53l-1.29,-0zM46.68,73.31s-12.02,-11.3 -14.19,-22.17c-1.97,-9.88 -1.48,-25.11 -1.48,-25.11 7.59,-0.01 16.48,-0.01 24.72,-0.01 -9.04,-0 -19.19,0.01 -27.72,0.01 0,0 -0.49,15.24 1.48,25.11 2.17,10.87 14.19,22.17 14.19,22.17 -0.06,0.01 5.96,1.68 6.34,1.68h0.02l1.4,-0.37c-1.9,-0.49 -4.81,-1.3 -4.76,-1.31z"/>
-    <path android:fillColor="#CFB061" android:pathData="M43.67,72.99s3.16,0.8 6.32,0.8c3.16,0 6.32,-0.8 6.32,-0.8 0.93,0 1.69,0.72 1.69,1.6 0,0.88 -1.6,1.6 -2.53,1.6 0,0 -2.73,0.8 -5.47,0.8 -2.74,0 -5.5,-0.8 -5.5,-0.8 -0.93,0 -2.53,-0.72 -2.53,-1.6 -0,-0.88 0.75,-1.6 1.69,-1.6z"/>
-    <path android:fillColor="#C7A13E" android:pathData="M50,23c12.15,0 22.01,1.34 22.01,2.99 0,1.65 -9.85,2.99 -22.01,2.99s-22.01,-1.34 -22.01,-2.99c0,-1.65 9.85,-2.99 22.01,-2.99z"/>
+<vector android:height="24dp" android:tint="#CFB061"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M19,5h-2V3H7v2H5C3.9,5 3,5.9 3,7v1c0,2.55 1.92,4.63 4.39,4.94c0.63,1.5 1.98,2.63 3.61,2.96V19H7v2h10v-2h-4v-3.1c1.63,-0.33 2.98,-1.46 3.61,-2.96C19.08,12.63 21,10.55 21,8V7C21,5.9 20.1,5 19,5zM5,8V7h2v3.82C5.84,10.4 5,9.3 5,8zM19,8c0,1.3 -0.84,2.4 -2,2.82V7h2V8z"/>
 </vector>
