--- a/app/src/main/res/layout/fragment_finished_single_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_single_game_detail.xml
@@ -9,8 +9,6 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="parent"
-    android:layout_marginBottom="16dp"
-    android:background="@color/main_background_color"
     tools:context=".ui.finishedSingleGameDetail.FinishedSingleGameDetailFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -54,15 +52,16 @@
             style="@style/HeaderTextViewStyle"
             android:text="@string/players"
             android:layout_marginTop="16dp"
+            android:paddingStart="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolBar"
-            app:drawableLeftCompat="@drawable/ic_player" />
+            app:drawableLeftCompat="@drawable/ic_player"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:id="@+id/player1Name"
             style="@style/NameTextViewStyle"
-            android:background="#F1F1F1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/teamNames" />
@@ -74,13 +73,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/player1Name" />
 
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/divider1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/player1TotalScore"
+            app:layout_constraintBottom_toTopOf="@id/player2Name"
+            style="@style/DividerStyle"/>
         <TextView
             android:id="@+id/player2Name"
             style="@style/NameTextViewStyle"
-            android:background="#F1F1F1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/player1TotalScore" />
+            app:layout_constraintTop_toBottomOf="@+id/divider1" />
 
         <TextView
             android:id="@+id/player2TotalScore"
@@ -89,13 +94,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/player2Name" />
 
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/divider2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/player2TotalScore"
+            app:layout_constraintBottom_toTopOf="@id/player3Name"
+            style="@style/DividerStyle"/>
+
         <TextView
             android:id="@+id/player3Name"
             style="@style/NameTextViewStyle"
-            android:background="#F1F1F1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/player2TotalScore" />
+            app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
         <TextView
             android:id="@+id/player3TotalScore"
@@ -104,13 +116,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/player3Name" />
 
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/divider3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/player3TotalScore"
+            app:layout_constraintBottom_toTopOf="@id/player4Name"
+            style="@style/DividerStyle"/>
         <TextView
             android:id="@+id/player4Name"
             style="@style/NameTextViewStyle"
-            android:background="#F1F1F1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/player3TotalScore" />
+            app:layout_constraintTop_toBottomOf="@+id/divider3" />
+
 
         <TextView
             android:id="@+id/player4TotalScore"
@@ -141,43 +161,60 @@
             android:id="@+id/detailLabel"
             style="@style/HeaderTextViewStyle"
             android:text="@string/detail"
+            app:drawableLeftCompat="@drawable/ic_info"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerView"
-            app:drawableLeftCompat="@drawable/ic_info" />
+            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerView" />
 
         <TextView
             android:id="@+id/gameDetail"
             style="@style/InfoTextViewStyle"
-            android:layout_margin="16dp"
+            android:layout_width="0dp"
+            app:layout_constraintEnd_toStartOf="@+id/showScoreDifferencesTextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailLabel" />
 
         <TextView
-            android:id="@+id/expandableTextView"
+            android:id="@+id/showScoreDifferencesTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/show_differences"
+            android:textColor="@color/score_differences_text_color"
+            android:textSize="11sp"
+            android:textStyle="bold"
+            app:drawableRightCompat="@drawable/ic_show_detail"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detailLabel" />
+
+        <TextView
+            android:id="@+id/scoreDifferencesTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="6dp"
             android:gravity="center_vertical"
-            android:maxLines="3"
             android:lineSpacingExtra="4dp"
+            android:maxLines="3"
+            android:paddingStart="32dp"
             android:textColor="@color/date_text_color"
             android:textSize="13sp"
             android:textStyle="normal"
-            android:paddingStart="32dp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gameDetail" />
+            app:layout_constraintTop_toBottomOf="@+id/gameDetail"
+            tools:ignore="RtlSymmetry" />
+
 
         <TextView
             android:id="@+id/gameDate"
             style="@style/DateTextViewStyle"
             android:layout_margin="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/expandableTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/scoreDifferencesTextView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
