--- a/app/src/main/res/layout/partner_game_round_item.xml
+++ b/app/src/main/res/layout/partner_game_round_item.xml
@@ -24,7 +24,8 @@
     <com.google.android.material.divider.MaterialDivider
         style="@style/DividerStyle"
         android:layout_width="0.3dp"
-        android:layout_height="30dp" />
+        android:layout_height="30dp"
+        android:layout_gravity="center_vertical"/>
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/NameTextInputLayoutStyle"
