--- a/app/src/main/res/layout/single_game_round_item.xml
+++ b/app/src/main/res/layout/single_game_round_item.xml
@@ -18,7 +18,8 @@
         <com.google.android.material.divider.MaterialDivider
             style="@style/DividerStyle"
             android:layout_width="0.3dp"
-            android:layout_height="30dp" />
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"/>
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/NameTextInputLayoutStyle"
@@ -32,7 +33,8 @@
         <com.google.android.material.divider.MaterialDivider
             style="@style/DividerStyle"
             android:layout_width="0.3dp"
-            android:layout_height="30dp" />
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"/>
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/NameTextInputLayoutStyle"
@@ -46,7 +48,8 @@
         <com.google.android.material.divider.MaterialDivider
             style="@style/DividerStyle"
             android:layout_width="0.3dp"
-            android:layout_height="30dp" />
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"/>
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/NameTextInputLayoutStyle"
