--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources >
-    <color name="purple_200">#FFBB86FC</color>
     <color name="status_bar_color">#FFFFFF</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="white">#FFFFFF</color>
-    <color name="black">#000000</color>
-    <color name="green">#95FF00</color>
 
     <color name="primary_color">#000000</color>
     <color name="date_text_color">#45494A</color>
@@ -18,18 +13,11 @@
     <color name="fab_text_color">#292F33</color>
     <color name="fab_background_color">#4CAF50</color>
     <color name="fab_icon_color">#FFFFFF</color>
-    <color name="title_text_color">#292F33</color>
     <color name="error_text_color">#292F33</color>
-    <color name="stroke_color">#45494A</color>
-    <color name="main_background_color">#FFFFFF</color>
+    <color name="main_background_color">#FFFFFFFF</color>
     <color name="button_text_color">#FFFFFF</color>
     <color name="icon_color">#646E72</color>
     <color name="searchview_text_color">#292F33</color>
-    <color name="min_score_color">#8022D11B</color>
-    <color name="max_score_color">#80FF0000</color>
-    <color name="item_background_color1">#FFFFFF</color>
-    <color name="item_background_color2">#F3F3F3</color>
-    <color name="winner_color">#FFF176</color>
     <color name="delete_color">#FF0000</color>
     <color name="snackbar_background_color">#4CAF50</color>
     <color name="snackbar_text_color">#FFFFFF</color>
@@ -37,7 +25,6 @@
     <color name="toolbar_text_color">#292F33</color>
     <color name="cardview_background_color">#FFFFFF</color>
     <color name="cardview_shadow_color">#000000</color>
-    <color name="alert_dialog_background_color">#000000</color>
     <color name="alert_dialog_button_text_color">#000000</color>
     <color name="text_input_layout_text_color">#292F33</color>
     <color name="text_input_layout_hint_color">#292F33</color>
@@ -54,5 +41,6 @@
     <color name="line_color_light">#FFFFFF</color>
     <color name="header_text_color">#FFFFFF</color>
     <color name="header_background_color">#45494A</color>
+    <color name="score_differences_text_color">#646E72</color>
 
 </resources>
