--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="LinearLayoutStyle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:orientation">horizontal</item>
-    </style>
 
     <style name="AlertDialogStyle" parent="ThemeOverlay.AppCompat.Dialog.Alert">
         <item name="android:windowBackground">@color/main_background_color</item>
         <item name="android:textColor">@color/delete_color</item>
         <item name="android:buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
         <item name="android:buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
-        <item name="android:color">@style/PositiveButtonStyle</item>
-
+        <item name="android:textColorPrimary">@color/alert_dialog_button_text_color</item>
     </style>
 
     <style name="NegativeButtonStyle" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
@@ -30,10 +24,6 @@
         <item name="colorAccent">@color/searchview_text_color</item>
     </style>
 
-    <style name="Theme.MyApp" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorAccent">@color/searchview_text_color</item>
-        <item name="searchViewStyle">@style/SearchViewStyle</item>
-    </style>
 
     <style name="SingleGameTextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
         <item name="android:layout_width">match_parent</item>
@@ -61,12 +51,11 @@
 
     </style>
 
-    <style name="ButtonStyle" parent="@style/Widget.AppCompat.Button">
+    <style name="ButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="android:visibility">gone</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">8dp</item>
-
         <item name="android:textColor">@color/button_text_color</item>
         <item name="android:background">@drawable/custom_button</item>
     </style>
@@ -82,9 +71,8 @@
         <item name="android:paddingBottom">8dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">normal</item>
-
+        <item name="android:background">@color/line_color_dark</item>
     </style>
-
 
     <style name="ScoreTextViewStyle" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">match_parent</item>
@@ -93,9 +81,9 @@
         <item name="android:textColor">@color/name_text_color</item>
         <item name="android:paddingStart">13dp</item>
         <item name="android:paddingEnd">16dp</item>
-        <item name="android:paddingTop">8dp</item>
         <item name="android:paddingBottom">8dp</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:background">@color/line_color_light</item>
 
     </style>
     <style name="HeaderTextViewStyle" parent="Widget.AppCompat.TextView">
@@ -108,8 +96,6 @@
         <item name="android:paddingStart">13dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:padding">8dp</item>
-
-
     </style>
 
     <style name="NameTextInputLayoutStyle" parent="Widget.AppCompat.EditText" >
@@ -119,7 +105,6 @@
         <item name="android:textColor">@color/score_hint_text_color</item>
         <item name="android:textColorPrimary">@color/score_hint_text_color</item>
         <item name="android:textColorPrimaryInverseDisableOnly">@color/score_hint_text_color</item>
-
         <item name="android:hint">Oyuncu</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textSize">16sp</item>
@@ -143,27 +128,6 @@
 
     </style>
 
-    <style name="PlayerImageViewStyle" >
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:src">@drawable/ic_player</item>
-        <item name="android:layout_marginTop">8dp</item>
-        <item name="android:contentDescription">@string/todo</item>
-
-    </style>
-
-    <style name="TeamImageViewStyle" >
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:src">@drawable/ic_partner</item>
-        <item name="android:layout_marginTop">8dp</item>
-        <item name="android:layout_marginStart">8dp</item>
-        <item name="android:layout_marginEnd">8dp</item>
-        <item name="android:contentDescription">@string/todo</item>
-
-    </style>
-
-
     <style name="DateTextViewStyle" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">@color/date_text_color</item>
         <item name="android:layout_width">match_parent</item>
@@ -178,25 +142,15 @@
         <item name="android:layout_marginStart">8dp</item>
         <item name="android:layout_marginEnd">8dp</item>
         <item name="android:layout_marginBottom">8dp</item>
-
-    </style>
-
-    <style name="TitleTextViewStyle" parent="Widget.AppCompat.TextView">
-        <item name="android:textColor">@color/title_text_color</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:layout_margin">16dp</item>
     </style>
 
     <style name="DividerStyle" parent="Widget.MaterialComponents.MaterialDivider">
-        <item name="android:background">@color/separator_color</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">16dp</item>
         <item name="dividerThickness">0.1dp</item>
         <item name="dividerColor">@color/divider_color</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
 
     </style>
 
@@ -208,16 +162,11 @@
         <item name="android:textStyle">normal</item>
         <item name="android:textSize">13sp</item>
         <item name="android:layout_marginTop">16dp</item>
-        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginStart">16dp</item>
         <item name="android:layout_marginEnd">8dp</item>
         <item name="android:drawablePadding">8dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:drawableLeft">@drawable/ic_trophy</item>
-    </style>
-
-    <style name="HintTextAppearance" parent="TextAppearance.Design.Hint">
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/purple_200</item>
     </style>
 
 </resources>
