Kayıt olmadığında çıkan uyarı ve seçim ekranında güncelleme yapıldı

--- a/app/src/main/res/layout/fragment_choose_game.xml
+++ b/app/src/main/res/layout/fragment_choose_game.xml
@@ -6,12 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".ui.chooseGame.ChooseGameFragment">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginBottom="12dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_app"
+        app:layout_constraintBottom_toTopOf="@+id/goToSaveSingleGameFragment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/goToSaveSingleGameFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginTop="-60dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/custom_button"
         android:text="@string/single_game"
         app:layout_constraintBottom_toBottomOf="parent"
