--- a/app/src/main/res/layout/fragment_finished_partner_game.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game.xml
@@ -25,6 +25,7 @@
         app:tint="@color/searchview_text_color" />
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,17 +45,32 @@
     </ScrollView>
 
     <TextView
-        android:id="@+id/recordNotFound"
-        android:layout_width="wrap_content"
+        android:id="@+id/recordNotFoundText"
+        android:layout_width="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="-60dp"
+        android:textAlignment="center"
         android:layout_height="wrap_content"
         android:text="@string/record_not_found"
         android:textColor="@color/error_text_color"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/recordNotFoundImage"
+        android:layout_marginTop="8dp"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:src="@drawable/ic_beckon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recordNotFoundText"
+        android:contentDescription="@string/todo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
