--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -34,7 +34,7 @@
     <color name="tablayout_text_color">#FFFFFF</color>
     <color name="back_icon_color">#FFFFFF</color>
     <color name="button_background_color">#424242</color>
-    <color name="divider_color">#646E72</color>
+    <color name="divider_color">#45494A</color>
     <color name="tab_indicator_color">#4CAF50</color>
     <color name="searchview_border_color">#45494A</color>
     <color name="line_color_dark">#000000</color>
