--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,15 +3,13 @@
     <color name="status_bar_color">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
 
-    <color name="primary_color">#000000</color>
+    <color name="primary_color">#23221F</color>
     <color name="date_text_color">#45494A</color>
     <color name="info_text_color">#45494A</color>
     <color name="name_text_color">#292F33</color>
     <color name="score_text_color">#292F33</color>
     <color name="score_hint_text_color">#292F33</color>
     <color name="separator_color">#45494A</color>
-    <color name="fab_text_color">#292F33</color>
-    <color name="fab_background_color">#4CAF50</color>
     <color name="fab_icon_color">#FFFFFF</color>
     <color name="error_text_color">#292F33</color>
     <color name="main_background_color">#FFFFFFFF</color>
@@ -32,7 +30,7 @@
     <color name="text_input_layout_counter_text_color">#292F33</color>
     <color name="cursor_color">#4CAF50</color>
     <color name="tablayout_text_color">#292F33</color>
-    <color name="back_icon_color">#000000</color>
+    <color name="back_icon_color">#23221F</color>
     <color name="button_background_color">#E8E8E8</color>
     <color name="divider_color">#45494A</color>
     <color name="searchview_border_color">#45494A</color>
@@ -43,5 +41,6 @@
     <color name="header_background_color">#45494A</color>
     <color name="score_differences_text_color">#646E72</color>
     <color name="onboarding_indicator_color">#4CAF50</color>
+    <color name="logo_text_color">#23221F</color>
 
 </resources>
